@@ -5,11 +5,10 @@
  * GNU Affero General Public License as published by the Free Software Foundation, either version 3
  * of the License, or (at your option) any later version.
  *
- * As a special exception to the terms and conditions of version 3.0 of
- * the GPL, you may redistribute this Program in connection with Free/Libre
- * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have recieved a copy of the text describing
- * the FLOSS exception, and it is also available here:
+ * As a special exception to the terms and conditions of version 3.0 of the GPL, you may
+ * redistribute this Program in connection with Free/Libre Open Source Software ("FLOSS")
+ * applications as described in Silverpeas's FLOSS exception. You should have recieved a copy of the
+ * text describing the FLOSS exception, and it is also available here:
  * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
@@ -22,9 +21,7 @@
 package org.silverpeas.servlets;
 
 import java.net.URLEncoder;
-import java.rmi.RemoteException;
 
-import javax.ejb.CreateException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
@@ -33,11 +30,12 @@ import com.silverpeas.peasUtil.GoTo;
 import com.stratelia.silverpeas.peasCore.URLManager;
 import com.stratelia.webactiv.forums.forumsException.ForumsRuntimeException;
 import com.stratelia.webactiv.forums.forumsManager.ejb.ForumsBM;
-import com.stratelia.webactiv.forums.forumsManager.ejb.ForumsBMHome;
 import com.stratelia.webactiv.forums.url.ActionUrl;
 import com.stratelia.webactiv.util.EJBUtilitaire;
 import com.stratelia.webactiv.util.JNDINames;
 import com.stratelia.webactiv.util.exception.SilverpeasRuntimeException;
+
+import org.apache.commons.lang3.CharEncoding;
 
 public class GoToMessage extends GoTo {
 
@@ -48,25 +46,18 @@ public class GoToMessage extends GoTo {
       HttpServletResponse res) throws Exception {
     int forumId = Integer.parseInt(req.getParameter("ForumId"));
     String componentName = getForumsBM().getForumInstanceId(forumId);
-    String messageUrl = ActionUrl.getUrl("viewMessage", "viewForum", 1, Integer
-        .parseInt(objectId), forumId);
+    String messageUrl = ActionUrl.getUrl("viewMessage", "viewForum", 1, Integer.parseInt(objectId),
+        forumId);
     String gotoURL = URLManager.getURL(null, componentName) + messageUrl;
-    return "goto=" + URLEncoder.encode(gotoURL, "UTF-8");
+    return "goto=" + URLEncoder.encode(gotoURL, CharEncoding.UTF_8);
   }
 
   private ForumsBM getForumsBM() {
-    ForumsBM forumsBM = null;
     try {
-      ForumsBMHome forumsBMHome = EJBUtilitaire.getEJBObjectRef(JNDINames.FORUMSBM_EJBHOME,
-          ForumsBMHome.class);
-      forumsBM = forumsBMHome.create();
-    } catch (RemoteException e) {
-      throw new ForumsRuntimeException("RssServlet.getForumsBM()",
-          SilverpeasRuntimeException.ERROR, "root.EX_CANT_GET_REMOTE_OBJECT", e);
-    }catch (CreateException e) {
-      throw new ForumsRuntimeException("RssServlet.getForumsBM()",
-          SilverpeasRuntimeException.ERROR, "root.EX_CANT_GET_REMOTE_OBJECT", e);
+      return EJBUtilitaire.getEJBObjectRef(JNDINames.FORUMSBM_EJBHOME, ForumsBM.class);
+    } catch (Exception e) {
+      throw new ForumsRuntimeException("RssServlet.getForumsBM()", SilverpeasRuntimeException.ERROR,
+          "root.EX_CANT_GET_REMOTE_OBJECT", e);
     }
-    return forumsBM;
   }
 }
